    
    o   Added new data set, stroop, which contains the accuracy and response 
        time data from Lin, Saunders, Friese, Evans, and Inzlicht (2020, Psych 
        Science, https://doi.org/10.1177/0956797620904990).
        
    o   Added new vignette, "Analysis of Accuracy Data using ANOVA and binomial 
        GLMMs" which uses the new Stroop data.

    o   Better error messages in case of NAs in the response variable for 
        ANOVAs and mixed models.

    Bugfixes

    o   objects estimated with mixed(..., all_fit = TRUE) should now work
        again with emmeans.
        
    o   afex_plot() works with mixed models estimated with mixed(..., type = 2) 
        (i.e., mixed models with Type II sums of squares).
        
    o   afex_plot() did not work if data had a column called y that appeared
        before the response/DV column in data.


                    *************************
                    ** afex VERSION 0.27-x **
                    *************************
                    
                    Changes in afex Version 0.27-x
                    Released March 2020
                    
    Significant User Visible Changes and New Features
    
    o   p-values are now per default rounded to 3 digits following APA 
        recommendations, thanks to Marius Barth: 
        https://github.com/singmann/afex/issues/81
        To achieve this, a new argument, round_ps, was added to nice() which 
        accepts a rounding function and defaults to round_ps_apa() via 
        afex_options("round_ps"). To reset to the old rounding behaviour, call:
        afex_options(round_ps = round_ps)

    o   New p-value rounding function round_ps_apa().  

    Bugfixes

    o   mixed(): check_contrasts = TRUE now works when the formula is not a 
        formula (but e.g., a character string).
        
    o   Better error message when ANOVA formula does not include an errror term.
    
    o   Should work with both lme4 1.1-22 and later.

